
  Pre-release 0.6.2

  o CHANGE: Align & Mutate now provides a simple dialog with the
    alignment.

  o CHANGE: Environment distances are separated into bumps and bonds.

  o CHANGE: Move molecule here only moves small molecules by default
    now.  There is an check button to allow big molecules

  o BUG-FIX:: Hydrogens on waters are no longer check against the
    difference map in the water validation test.

  o BUG-FIX: rename residue works on only the specified chain.

-----

  Release 0.6.1

  o FEATURE: Quick-save - bound to Ctrl-S.

  o FEATURE: Binary updates (pre-releases) now available. 

  o FEATURE: tutorial data can be loaded from a Extensions menu item

  o FEATURE: A means to set the refinement weight so that the
    resulting chi squareds are 1.0 (or close) [Katya Heldwein]

  o CHANGE: "Save dialog positions" now also saves the Edit Chi Angles
    dialog position [Markus Rudolph].

  o CHANGE: Coot can now go through proxies (http_proxy environment
    variable) to get News and Updates.

  o CHANGE: Baton manipulation is now possible when the skeleton runs
    out.

  o CHANGE: Hydrogen representation now thin and grey monotone.

  o CHANGE: Interface to sidechain docking improved [Phil Evans].

  o CHANGE: Updates to sync with new EDS (Electron Density Server).

  o CHANGE: Filenames of mtzs and pdb in the current directory are now
    stored as relative in the state file [Andre White].

  o CHANGE: Default image type for screenshot is now PNG [Joel Bard].

  o CHANGE: --python --no-graphics results in a python prompt at the 
    command line [Gabor Bunkoczi].

  o BUG-FIX: Check waters by difference map now works again [Misty X].

  o BUG-FIX: SSM alignment crash fixed [Ed Pozharski].

  o BUG-FIX: Splitting a sidechain with zero occupancy no longer
    leaves atoms with negative occupancy [Takaaki Fukami].
  
  o BUG-FIX: Shift-spacing through waters, deleting active water now
    goes to previous atom [Ingo Korndoerfer].
